--- a/WebChat/appsettings.json
+++ b/WebChat/appsettings.json
@@ -7,13 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(DESKTOP-2609IBJ)\\mssqllocaldb;Database=users;Trusted_Connection=True"
-  },
-  "PostgreConnection": "Host=DESKTOP-2609IBJ;Database=mydb;Username=postgres;Password=password",
-
-  "Database": {
-    "ConnectionStrings": {
-      "Messages": "Server=(DESKTOP-2609IBJ)\\mssqllocaldb;Database=messages;Trusted_Connection=True"
-    }
+    "DefaultConnection": "Server=localhost;Database=testdb;Username=postgres;Password=disa123"
   }
 }
