--- a/WebChat/appsettings.json
+++ b/WebChat/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=testdb;Username=postgres;Password=disa123"
+    "DefaultConnection": "Server=localhost;Database=testdb2;Username=postgres;Password=disa123"
   }
 }
